fixed some weird alignment issue with the fa-discord icon

--- a/style/main.less
+++ b/style/main.less
@@ -94,3 +94,9 @@ article .tldr+p {
   float:left;
   width: 50vw !important;
 }
+
+
+//fix for .fa-discord misalignment
+.fa-discord {
+  transform: translateY(6.3%);
+}
